UPDATE Welcome with sol-card

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -72,7 +72,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
-.eth-card {
+.sol-card {
   background-color: #a099ff;
   background-image: radial-gradient(
       at 83% 67%,
